// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`finance flow actions should create SET_CATEGORIES action with snapshot 1`] = `
Object {
  "payload": Object {
    "id": 1,
    "name": "jedzenie",
  },
  "type": "SET_CATEGORIES",
}
`;

exports[`finance flow actions should create addProfit action with snapshot 1`] = `
Object {
  "payload": Object {
    "message": undefined,
    "profit": undefined,
  },
  "type": "CREATE_PROFIT",
}
`;

exports[`finance flow actions should create addSpending action with snapshot 1`] = `
Object {
  "payload": Object {
    "message": undefined,
    "spending": undefined,
  },
  "type": "CREATE_SPENDING",
}
`;

exports[`finance flow actions should create editProfit action with snapshot 1`] = `
Object {
  "payload": Object {
    "id": 1,
    "items": Object {
      "category": "jedzenie",
      "description": undefined,
      "id": 1,
      "period": "2018-01-01 12:12:12",
      "profit": 300,
    },
    "message": "test",
  },
  "type": "UPDATE_PROFIT",
}
`;

exports[`finance flow actions should create editSpending action with snapshot 1`] = `
Object {
  "payload": Object {
    "id": 1,
    "items": Object {
      "category": "jedzenie",
      "description": undefined,
      "id": 1,
      "period": "2018-01-01 12:12:12",
      "spending": 300,
    },
    "message": "test",
  },
  "type": "UPDATE_SPENDING",
}
`;

exports[`finance flow actions should create reduceCategories action with snapshot 1`] = `
Object {
  "payload": Object {
    "categories": undefined,
  },
  "type": "SELECTCATEGORIES",
}
`;

exports[`finance flow actions should create removeProfit action with snapshot 1`] = `
Object {
  "payload": Object {
    "id": undefined,
    "message": Array [
      Object {
        "id": 1,
      },
    ],
  },
  "type": "DELETE_PROFIT",
}
`;

exports[`finance flow actions should create removeSpending action with snapshot 1`] = `
Object {
  "payload": Object {
    "id": undefined,
    "message": Array [
      Object {
        "id": 1,
      },
    ],
  },
  "type": "DELETE_SPENDING",
}
`;

exports[`finance flow actions should create resetCategories action with snapshot 1`] = `
Object {
  "payload": Object {
    "categories": undefined,
  },
  "type": "RESET_CATEGORIES",
}
`;

exports[`finance flow actions should create setProfit action with snapshot 1`] = `
Object {
  "payload": Array [
    Object {
      "category": Object {
        "id": 1,
        "name": "jedzenie",
      },
      "id": 1,
      "name": "Zakupy",
      "period": "2018-01-01 12:12:12",
      "user_id": 1,
      "value": 300,
    },
  ],
  "type": "READ_PROFIT",
}
`;

exports[`finance flow actions should create setSpending action with snapshot 1`] = `
Object {
  "payload": Array [
    Object {
      "category": Object {
        "id": 1,
        "name": "jedzenie",
      },
      "id": 1,
      "name": "Zakupy",
      "period": "2018-01-01 12:12:12",
      "user_id": 1,
      "value": 300,
    },
  ],
  "type": "READ_SPENDING",
}
`;
